@@ -1,3 +1,6 @@
+2003-08-17  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/gramps_main.py: Better behavior for the history menu.
+
 2003-08-16  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/gramps_main.py: Functional history submenu of the Go menu.
 
